--- a/assets/css/classPicker.css
+++ b/assets/css/classPicker.css
@@ -34,29 +34,31 @@ h5 {
 	text-transform: uppercase;
 	vertical-align: middle;
 	text-align: center;
-	font-size: 8px;
+	font-size: 0.75rem;
 }
 
 .classIcon {
-	width: 70px;
-	margin: 0 auto;
+	margin: 0 auto 100px;
 	padding: auto;
+	text-align: center;
 }
 
 .classIconBox {
-	width: 100px;
-	display: inline-block;
-	padding: 0px 10px 0px 10px;
-	margin: 10px 10px 0px 10px;
+	width: 100%;
+	display: grid;
+	padding: 10px 0;
+	margin: 10px auto;
 	border: 3px solid black;
-	height: 100px;
+	height: 165px;
+	width: 165px;
 	background-color: silver;
 	color: black;
 }
 
 img {
-	width: 75px;
-	height: 75px;
+
+	max-width:100%;
+	max-height:100%;
 }
 
 #dh {
@@ -65,8 +67,7 @@ img {
 }
 
 .iconList {
-	width: 60%;
-	margin: 20px auto;
+	margin: auto;
 	padding: 0 auto;
 }
 
@@ -78,7 +79,9 @@ img {
 
 .parameters {
 	padding: 30px;
-	font-size: 70%;
+	font-size: 100%;
+	margin: auto;
+	text-align: center;
 }
 
 #picked {
